--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
     "astro": "^5.2.5",
+    "swiper": "^11.2.10",
     "tailwind": "^4.0.0"
   }
 }
