--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.3.1",
     "@astrojs/tailwind": "^6.0.2",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "astro": "^5.2.5",
     "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "swiper": "^11.2.10",
     "tailwind": "^4.0.0"
   }
